--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "reallary",
-  "version": "0.1.0",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
+    "react-transition-group": "^2.5.0",
     "styled-components": "^3.4.9"
   },
   "scripts": {
