--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-pose": "^3.3.6",
     "react-scripts": "1.1.5",
-    "react-transition-group": "^2.5.0",
     "styled-components": "^3.4.9"
   },
   "scripts": {
